<project xmlns="http://maven.apache.org/POM/4.0.0">
    <modelVersion>4.0.0</modelVersion>
    <groupId>net.ritzow</groupId>
    <artifactId>news-site-app</artifactId>
    <version>1.0-SNAPSHOT</version>
    <properties>
        <maven.compiler.source>19</maven.compiler.source>
        <maven.compiler.target>19</maven.compiler.target>
        <maven.compiler.release>19</maven.compiler.release>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>
    <packaging>jar</packaging>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-bom</artifactId>
                <version>11.0.12</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-parent</artifactId>
                <version>2.0.3</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>
    
    <build>
        <resources>
            <resource>
                <directory>${project.basedir}/src/main/css</directory>
                <targetPath>css</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/lang</directory>
                <targetPath>lang</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/image</directory>
                <targetPath>image</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/xml</directory>
                <targetPath>xml</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main/font</directory>
                <targetPath>font</targetPath>
            </resource>
            <resource>
                <directory>${project.basedir}/src/main</directory>
                <includes>
                    <include>simplelogger.properties</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>net.ritzow</groupId>
                <artifactId>runner</artifactId>
                <version>1.4-SNAPSHOT</version>
                <configuration>
                    <jvmProps>${project.basedir}/project.properties</jvmProps>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.0</version>
                <configuration>
					<compilerArgs>--enable-preview</compilerArgs>
				</configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.2.0</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>net.ritzow.news.run.RunSite</mainClass>
                        </manifest>
                        <addMavenDescriptor>false</addMavenDescriptor>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jlink-plugin</artifactId>
                <version>3.1.0</version>
                <configuration>
                    <!--<skip>true</skip>-->
                    <noManPages>true</noManPages>
                    <noHeaderFiles>true</noHeaderFiles>
                    <endian>little</endian>
                    <compress>2</compress>
                    <stripDebug>true</stripDebug>
                </configuration>
                <!--<executions>
                    <execution>
                        <phase>none</phase>
                    </execution>
                </executions>-->
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <descriptors>assembly.xml</descriptors>
                    <attach>false</attach>
                    <appendAssemblyId>false</appendAssemblyId>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    
    <dependencies>
        <!-- HTTP/1.1 -->
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-server</artifactId>
        </dependency>

        <!-- HTTP/2 -->
        <dependency>
            <groupId>org.eclipse.jetty</groupId>
            <artifactId>jetty-alpn-java-server</artifactId>
        </dependency>
        <dependency>
            <groupId>org.eclipse.jetty.http2</groupId>
            <artifactId>http2-server</artifactId>
        </dependency>

        <!-- HTTP/3 -->
        <dependency>
            <groupId>org.eclipse.jetty.http3</groupId>
            <artifactId>http3-server</artifactId>
            <exclusions>
                <exclusion>
                    <!-- Probably erroneously included in Jetty HTTP/3 support -->
                    <groupId>org.eclipse.jetty</groupId>
                    <artifactId>jetty-slf4j-impl</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        
        <!-- Security -->
        <dependency>
            <!-- Self-signed cert generation -->
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcpkix-jdk18on</artifactId>
            <version>1.72</version>
        </dependency>

        <!-- Content manipulation and generation -->
        <dependency>
            <groupId>com.j2html</groupId>
            <artifactId>j2html</artifactId>
            <version>1.6.0</version>
        </dependency>
        <dependency>
            <!-- Parse markdown -->
            <groupId>org.commonmark</groupId>
            <artifactId>commonmark</artifactId>
            <version>0.19.0</version>
        </dependency>
        <dependency>
            <!-- Could use for search functionality in the future -->
            <groupId>org.apache.lucene</groupId>
            <artifactId>lucene-core</artifactId>
            <version>9.2.0</version>
        </dependency>
        <dependency>
            <groupId>com.google.zxing</groupId>
            <artifactId>core</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>ar.com.hjg</groupId>
            <artifactId>pngj</artifactId>
            <version>2.1.0</version>
        </dependency>

        <!-- Database -->

        <dependency>
            <groupId>io.permazen</groupId>
            <artifactId>permazen-main</artifactId>
            <version>4.1.9</version>
        </dependency>
        <dependency>
            <groupId>io.permazen</groupId>
            <artifactId>permazen-kv-mvstore</artifactId>
            <version>4.1.9</version>
        </dependency>
        
        <!-- Logging -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
        </dependency>
        <dependency>
            <!-- Log to stdout -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <!-- Log OpenJDK messages (but not all of them) to SLF4J -->
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-jdk-platform-logging</artifactId>
            <version>2.0.0</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>net.ritzow</groupId>
            <artifactId>cert-manage-library</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.9.0</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>